change svg icon to img icon

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -41,7 +41,7 @@
           </button>
         </div>
         <div class="gate-area-body">
-          <label class="gate-area-body-section-label">Commons gates</label>
+          <label class="gate-area-body-section-label">Common gates</label>
           <div class="gate-area-body-common-gates">
             <div class="gateList">
               <div id="common-gates">
