Help page/Simulation tab fixes

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -189,13 +189,12 @@
         <canvas id="drawCanvasSim">
         </canvas>
         <div id="simulateOutput">
-          <!--          <ul id="dataOutput"></ul>-->
           <table id="vectorTable">
             <tr>
               <th>State</th>
               <th>Vector</th>
               <th>Phase angle</th>
-              <th>Probability</th>
+              <th id="vectFilter" style="color: blue">Probability</th>
             </tr>
             <tbody id="dataOutput">
             </tbody>
