fix simulate tab css

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -194,7 +194,7 @@
               <th>State</th>
               <th>Vector</th>
               <th>Phase angle</th>
-              <th id="vectFilter" style="color: blue">Probability</th>
+              <th id="vectFilter" style="color: blue; cursor: pointer">Probability</th>
             </tr>
             <tbody id="dataOutput">
             </tbody>
