--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -115,7 +115,7 @@
               </path>
             </svg>
           </button>
-          <button id="stateBarChartFilterZero">Hide zero states</button>
+          <button id="stateBarChartFilterZero">Show all states</button>
           <!--          <input type="checkbox" id="stateBarBool">-->
           <!--          <label>Use bar graph when above 12 qubits (may cause performance issues)</label>-->
           <div id="stateBarChart"></div>
@@ -177,17 +177,20 @@
       <button id="paste-menu-popup-btn">Paste</button>
     </div>
     <div class="simulate-area hidden" id="simulate">
-      <div class="simWrapper">
-        <h3 class="simTitle">
+      <h3 class="simTitle">
           <span class="simTitleLeft">
             Simulation Amplitudes
           </span>
-          <span class="simTitleRight">
+        <span class="simTitleRight">
             Simulation Output
           </span>
-        </h3>
-        <canvas id="drawCanvasSim">
-        </canvas>
+      </h3>
+      <div class="simWrapper">
+
+        <div id="canvasSimWrapper">
+          <canvas id="drawCanvasSim">
+          </canvas>
+        </div>
         <div id="simulateOutput">
           <table id="vectorTable">
             <tr>
