bar chart regex fix

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -190,7 +190,7 @@
           <div id="simulateOutput">
             <div class="table-action">
               <button id="vectFilter">Hide zero states</button>
-              <input id="vectSearch" placeholder="Enter Your State" type="number">
+              <input id="vectSearch" placeholder="Search for state" type="number">
             </div>
             <div class="table-content">
               <table id="vectorTable">
