vector table search no data added

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -189,8 +189,8 @@
           </div>
           <div id="simulateOutput">
             <div class="table-action">
+              <input id="vectSearch" placeholder="Search for state" type="search">
               <button id="vectFilter">Hide zero states</button>
-              <input id="vectSearch" placeholder="Search for state" type="number">
             </div>
             <div class="table-content">
               <table id="vectorTable">
