handle resize width/height areas

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="content" id="circuit">
-      <div class="gate-area">
+      <div class="gate-area" id="gate-area">
         <div class="gate-area-header">
           <input type="search" class="gate-area-header-search" id="gate-area-header-search" placeholder="Search">
           <button class="gate-area-header-btn active" id="gate-area-header-grid-btn" data-type="icon">
@@ -122,7 +122,7 @@
           <div id="stateVectorChart"></div>
         </div>
       </div>
-      <div class="code-area">
+      <div class="code-area" id="code-area">
         <button id="code-area-close-btn" data-gate="show">
           <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20"
             viewBox="0 0 32 32" aria-hidden="true" style="transform: rotate(90deg);">
