--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -4,6 +4,12 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title>Quantum Composer</title>
+  <style> 
+    @font-face {
+      font-family: myFirstFont;
+      src: url(SourceSans3-Medium.ttf);
+    }
+    </style>
   <link rel="stylesheet" href="./styles.css">
 </head>
 
