state to decimal/hexa

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -123,6 +123,11 @@
           </button>
           <button id="stateBarChartFilterZero">Show all states</button>
           <button id="sortBar">Sort</button>
+          <select id="changeState">
+            <option id="binState">Binary</option>
+            <option id="decState">Decimal</option>
+            <option id="hexState">Hexadecimal</option>
+          </select>
           <!--          <input type="checkbox" id="stateBarBool">-->
           <!--          <label>Use bar graph when above 12 qubits (may cause performance issues)</label>-->
           <div id="stateBarChart"></div>
