--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -111,7 +111,7 @@
           </div>
           <div class="circuit-area-header-right">
             <div class="circuit-area-header-right-lv1">
-              <span>Quantum End: </span>
+              <span>Choose a simulator: </span>
               <div class="circuit-area-header-right-lv2">
                 <div>
                   <select>
