--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -122,7 +122,7 @@
               </div>
             </div>
             <div>
-              <button class="circuit-area-header-right-lv2">
+              <button class="circuit-area-header-right-lv2" id="runButton">
                 <span class="run-icon">
                   <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5 4.80566V15.1903C5 16.5949 6.49989 17.4629 7.67881 16.7391L16.1412 11.5483C16.4031 11.3879 16.6199 11.1608 16.7704 10.8893C16.9209 10.6177 17 10.3109 17 9.99874C17 9.6866 16.9209 9.3798 16.7704 9.10824C16.6199 8.83666 16.4031 8.6096 16.1412 8.44917L7.67881 3.25685C7.41048 3.09266 7.10439 3.00408 6.79169 3.00014C6.479 2.9962 6.17086 3.07703 5.89865 3.23441C5.62644 3.3918 5.39988 3.62011 5.24203 3.8961C5.08417 4.1721 5.00066 4.48593 5 4.80566Z" fill="white" fill-opacity="0.9"></path></svg>
                 </span>
