--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -241,9 +241,10 @@
         </div>
         <div class="simulate-content">
           <div id="canvasSimWrapper">
-            <canvas id="drawCanvasSim">
+            <canvas id="drawCanvasSim" class="hide">
             </canvas>
             <div id="bloch-sphere">
+              <img src="./images/blochsphere.png" alt="bloch-sphere" />
             </div>
           </div>
           <div id="simulateOutput">
