notice error with unsupported gate html

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -182,6 +182,9 @@
         </div>
         <div id="code-area-body">
           <div id="text-code-wrapper">
+            <div id="error-notice" class="hide">
+              <span style="color: red;">Error: </span>can not compile to qasm code, try to remove recently added gates
+            </div>
             <textarea name="text-code" id="text-code" class="text-code">
             </textarea>
             <div id="text-code-qiskit" class="text-code-qiskit hide">
