replace api with quantum-circuit.min.js

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -316,7 +316,9 @@
 
   <script src='./dist/d3.min.js'></script>
   <script src='./dist/jquery-3.6.2.min.js'></script>
+  <script src='./dist/quantum-circuit.min.js'></script>
   <script src='./script.js'></script>
+
 
   <script>
     //noinspection InnerHTMLJS
