numbering code lines qasm qiskit

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -186,7 +186,12 @@
             <div id="error-notice" class="hide">
               <span style="color: red;">Error: </span>can not compile to qasm code, try to remove recently added gates
             </div>
-            <textarea name="text-code" id="text-code" class="text-code">
+            <div class="text-code-qasm">
+              <div class="line-numbers-qasm">
+                <span></span>
+              </div>
+              <textarea name="text-code" id="text-code" class="text-code"></textarea>
+            </div>
             </textarea>
             <div id="text-code-qiskit" class="text-code-qiskit hide">
             </div>
