fix css and gate color

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -184,7 +184,7 @@
         <div id="code-area-body">
           <div id="text-code-wrapper">
             <div id="error-notice" class="hide">
-              <span style="color: red;">Error: </span>can not compile to qasm code, try to remove recently added gates
+              <span>Error: </span>can not compile to qasm code, try to remove recently added gates
             </div>
             <div class="text-code-qasm">
               <div class="line-numbers-qasm">
