Update icon hpc in code colapse

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -187,6 +187,10 @@
               <span>Error: </span>can not compile to qasm code, try to remove recently added gates
             </div>
             <div class="text-code-qasm">
+              <div class="arrow-container open" data-side="left">
+                <div class="arrow-top"></div>
+                <div class="arrow-bottom"></div>
+              </div>
               <div class="line-numbers-qasm">
                 <span></span>
               </div>
