Add icon to close gate area

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -36,6 +36,10 @@
     </div>
     <div class="content" id="circuit">
       <div class="gate-area" id="gate-area">
+        <div class="arrow-container open" data-side="right">
+          <div class="arrow-top"></div>
+          <div class="arrow-bottom"></div>
+        </div>
         <div class="gate-area-header">
           <input type="search" class="gate-area-header-search" id="gate-area-header-search" placeholder="Search">
           <button class="gate-area-header-btn active" id="gate-area-header-grid-btn" data-type="icon">
