--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -131,6 +131,22 @@
           </div>
         </div>
         <div class="circuit-area-body" id="circuit-area-body">
+          <div class="loader">
+            <div class="lds-spinner">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
           <canvas id="drawCanvas">
           </canvas>
         </div>
@@ -159,6 +175,16 @@
           <div class="arrow-bottom"></div>
         </div>
         <div id="code-area-header">
+          <div class="coding-time-option">
+            <label for="lang">Auto Run Time: </label>
+            <select id="coding-time-option-select">
+              <option value="1" selected>2.5s</option>
+              <option value="2">3s</option>
+              <option value="3">5s</option>
+              <option value="4">8s</option>
+              <option value="5">10s</option>
+            </select>
+          </div>
           <div>
             <select id="quantum-code-option">
               <option value="1" selected>Open QASM 2.0</option>
