--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -175,6 +175,10 @@
           <div class="arrow-bottom"></div>
         </div>
         <div id="code-area-header">
+          <div class="countdown-idle-time">
+            <div class="text">Time left: </div>
+            <div class="time">0</div>
+          </div>
           <div class="coding-time-option">
             <label for="lang">Auto Run Time: </label>
             <select id="coding-time-option-select">
@@ -185,7 +189,7 @@
               <option value="10000">10s</option>
             </select>
           </div>
-          <div>
+          <div class="quantum-code-option">
             <select id="quantum-code-option">
               <option value="1" selected>Open QASM 2.0</option>
               <option value="2">Qiskit</option>
