Fix bux resize chart bar

--- a/quantum-composer/html/quirk.template.html
+++ b/quantum-composer/html/quirk.template.html
@@ -147,7 +147,7 @@
                 <div></div>
             </div>
         </div>
-          <canvas id="drawCanvas">
+          <canvas id="drawCanvas" class="draw-canvas">
           </canvas>
         </div>
         <div class="circuit-area-chart" id="circuit-chart">
